[gd_scene load_steps=31 format=3 uid="uid://xwugyhg5u3md"]

[ext_resource type="PackedScene" uid="uid://cg4a4sf8baa2e" path="res://Models/thargoid_out/thargoid.gltf" id="1"]
[ext_resource type="Script" uid="uid://bun8bspiyepin" path="res://behaviors/fire_at_target_global_state.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://ivslos3b7cmv" path="res://behaviors/player.tscn" id="2_jclav"]
[ext_resource type="Script" uid="uid://jrt1mttw02un" path="res://behaviors/Sounds.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://dw0206dd8mesw" path="res://Models/coriolis_out/coriolis.gltf" id="9"]
[ext_resource type="Material" uid="uid://bypyk3i4e4inc" path="res://materials/matrix1.tres" id="9_5wih3"]
[ext_resource type="PackedScene" uid="uid://tvsrc1byca1" path="res://Models/viper_out/viper.gltf" id="10"]
[ext_resource type="PackedScene" uid="uid://okvro62ssxp" path="res://Models/cobramk3_out/cobramk3.gltf" id="12"]
[ext_resource type="Script" uid="uid://c6tk28j2vmorg" path="res://behaviors/ready_to_launch.gd" id="13"]
[ext_resource type="Script" uid="uid://di08ea5kveqbp" path="res://behaviors/Rotate.gd" id="14"]
[ext_resource type="Script" uid="uid://cr5ejl6hlraib" path="res://behaviors/root.gd" id="15"]
[ext_resource type="Script" uid="uid://cmw6n17mebkcx" path="res://behaviors/boid.gd" id="17"]
[ext_resource type="Script" uid="uid://cqk70j8jant4u" path="res://behaviors/player_steering.gd" id="18"]
[ext_resource type="Script" uid="uid://s5pb8njisohn" path="res://behaviors/avoidance.gd" id="19"]
[ext_resource type="PackedScene" uid="uid://dc24oh4o5erhi" path="res://behaviors/SceneSwitcher.tscn" id="20"]
[ext_resource type="Script" uid="uid://cbrc3unamm5q3" path="res://behaviors/Flee.gd" id="21"]
[ext_resource type="Script" uid="uid://wtnjsmv3y8y2" path="res://behaviors/pursue.gd" id="22"]
[ext_resource type="Script" uid="uid://blhpcqstd5fde" path="res://behaviors/trail_renderer.gd" id="23"]
[ext_resource type="Material" uid="uid://ca5mcii5ms7ww" path="res://behaviors/CobraTrail.tres" id="24"]
[ext_resource type="Curve" path="res://behaviors/trail_width_curve.tres" id="25"]
[ext_resource type="Script" uid="uid://baw56rnhj0aqm" path="res://behaviors/wander.gd" id="26"]
[ext_resource type="Script" uid="uid://bhtkod4qbxkx7" path="res://behaviors/state_machine.gd" id="27"]
[ext_resource type="Script" uid="uid://oxik7qwy2p8e" path="res://behaviors/AttackState.gd" id="28"]
[ext_resource type="PackedScene" uid="uid://u484aytxc0ls" path="res://Space Skybox.tscn" id="28_t6842"]
[ext_resource type="Script" uid="uid://c2d7mphmtn1jv" path="res://behaviors/seek.gd" id="29"]
[ext_resource type="Environment" uid="uid://1cpn0tg8jm7c" path="res://behaviors/default_environment.tres" id="30"]
[ext_resource type="Script" uid="uid://h5wrviq7ex0m" path="res://behaviors/offset_pursue.gd" id="32"]
[ext_resource type="PackedScene" path="res://ui_layer.tscn" id="35_dvhi1"]

[sub_resource type="SphereShape3D" id="3"]
radius = 22.031

[sub_resource type="ConvexPolygonShape3D" id="2"]

[node name="State machines" type="Node3D"]
script = ExtResource("15")

[node name="Player" parent="." instance=ExtResource("2_jclav")]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, -145.71, -124.258, 37.0146)

[node name="Camera3D Controller" parent="Player/Camera3D" index="1" node_paths=PackedStringArray("boid_player", "boid")]
boid_player = NodePath("../../../camera follower")
boid = NodePath("../../../Attacker")

[node name="camera follower" type="CharacterBody3D" parent="."]
script = ExtResource("17")
max_speed = 15.0
max_force = 50

[node name="offset_pursue" type="Node" parent="camera follower" node_paths=PackedStringArray("leader_boid")]
script = ExtResource("32")
leader_boid = NodePath("../../Attacker")

[node name="Avoidance" type="Node" parent="camera follower"]
script = ExtResource("19")
feeler_angle = 90
feeler_length = 20
updates_per_second = 10
weight = 0.0
draw_gizmos = false

[node name="SceneSwitcher" parent="." instance=ExtResource("20")]

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 2.98023e-08, 1, -2.98023e-08, 2.98023e-08, 2.98023e-08, 1, 44.1358, 50, -38.8262)

[node name="Base" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 2.98023e-08, 1, -2.98023e-08, 2.98023e-08, 2.98023e-08, 1, 0, 50, 0)
collision_layer = 2
collision_mask = 13
script = ExtResource("14")
speed = -0.3

[node name="coriolis" parent="Base" instance=ExtResource("9")]
transform = Transform3D(-4.37114e-05, 1.3027e-12, -1000, 2.98023e-05, 1000, 0, 1000, -2.98023e-05, -4.37114e-05, -7.62939e-06, -2.86102e-06, 3.12639e-13)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Base"]
shape = SubResource("3")

[node name="pig" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0)
collision_layer = 8
collision_mask = 7
script = ExtResource("17")

[node name="viper" parent="pig" instance=ExtResource("10")]

[node name="FireAtTargetGlobalState" type="Node" parent="pig" node_paths=PackedStringArray("target")]
script = ExtResource("2")
target = NodePath("../../Attacker")

[node name="Avoidance" type="Node" parent="pig"]
script = ExtResource("19")
weight = 20.0

[node name="Pursue" type="Node" parent="pig"]
script = ExtResource("22")
enemy_node_path = NodePath("../../Attacker")
enabled = false

[node name="StateMachine" type="Node" parent="pig"]
script = ExtResource("27")
initial_state = NodePath("../ReadyToLaunch")
global_state_path = NodePath("../FireAtTargetGlobalState")

[node name="Seek" type="Node" parent="pig" node_paths=PackedStringArray("target")]
script = ExtResource("29")
target = NodePath("../../Attacker")
enabled = false

[node name="Wander" type="Node" parent="pig"]
script = ExtResource("26")
weight = 0.0
enabled = false

[node name="TrailRenderer" type="Node3D" parent="pig"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.3, 0, -0.955383)
script = ExtResource("23")
width = 0.4
width_curve = ExtResource("25")
material = ExtResource("9_5wih3")

[node name="TrailRenderer2" type="Node3D" parent="pig"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.3, 0, -0.955383)
script = ExtResource("23")
width = 0.4
width_curve = ExtResource("25")
material = ExtResource("9_5wih3")

[node name="Sounds" type="Node3D" parent="pig"]
script = ExtResource("7")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="pig/Sounds"]
volume_db = 50.0
doppler_tracking = 2

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="pig/Sounds"]
volume_db = 50.0
doppler_tracking = 2

[node name="AudioStreamPlayer3D3" type="AudioStreamPlayer3D" parent="pig/Sounds"]
volume_db = 50.0
doppler_tracking = 2

[node name="AudioStreamPlayer3D4" type="AudioStreamPlayer3D" parent="pig/Sounds"]
volume_db = 50.0
doppler_tracking = 2

[node name="AudioStreamPlayer3D5" type="AudioStreamPlayer3D" parent="pig/Sounds"]

[node name="ReadyToLaunch" type="Node" parent="pig"]
script = ExtResource("13")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.146447, -0.853553, 0.5, 0.5, 0.5, 0.707107, -0.853553, 0.146447, 0.5, 0, 0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("30")

[node name="AttackerBase" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -236.856, -125.307, 204.61)

[node name="thargoid" parent="AttackerBase" instance=ExtResource("1")]
transform = Transform3D(3000, 0, 0, 0, 3000, 0, 0, 0, 3000, 0, 0, 0)
script = ExtResource("14")
speed = -0.3

[node name="Plane_001" parent="AttackerBase/thargoid/RootNode" index="0"]
surface_material_override/0 = ExtResource("9_5wih3")

[node name="Plane" parent="AttackerBase/thargoid/RootNode" index="1"]
surface_material_override/0 = ExtResource("9_5wih3")

[node name="Attacker" type="CharacterBody3D" parent="."]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, -235.481, -124.258, 207.591)
collision_mask = 10
script = ExtResource("17")
force = Vector3(0, -10, 0)
max_speed = 15.0
max_force = 20

[node name="StateMachine" type="Node" parent="Attacker"]
script = ExtResource("27")
initial_state = NodePath("../AttackState")
global_state_path = NodePath("../FireAtTargetGlobalState")

[node name="FireAtTargetGlobalState" type="Node" parent="Attacker" node_paths=PackedStringArray("target")]
script = ExtResource("2")
target = NodePath("../../Base")

[node name="Avoidance" type="Node" parent="Attacker"]
script = ExtResource("19")
feeler_angle = 30
feeler_length = 70
updates_per_second = 10
weight = 20.0
draw_gizmos = false

[node name="AttackState" type="Node" parent="Attacker"]
script = ExtResource("28")

[node name="Seek" type="Node" parent="Attacker" node_paths=PackedStringArray("target")]
script = ExtResource("29")
target = NodePath("../../Marker3D")
enabled = false

[node name="Wander" type="Node" parent="Attacker"]
script = ExtResource("26")
jitter = 100.0
weight = 0.5
draw_gizmos = false
enabled = false

[node name="Flee" type="Node" parent="Attacker"]
script = ExtResource("21")
enemy_path = NodePath("../../pig")
flee_range = 30
weight = 10.0
draw_gizmos = false
enabled = false

[node name="PlayerSteering" type="Node" parent="Attacker"]
script = ExtResource("18")
weight = 10.0
draw_gizmos = false
enabled = false

[node name="MeshInstance3D" parent="Attacker" instance=ExtResource("12")]
transform = Transform3D(200, 0, 0, 0, 200, 0, 0, 0, 200, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Attacker"]
visible = false
shape = SubResource("2")

[node name="CamTarget" type="Marker3D" parent="Attacker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.9533, -6.65113)

[node name="TrailRenderer" type="Node3D" parent="Attacker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.269, -0.043, -0.485001)
script = ExtResource("23")
width = 0.4
width_curve = ExtResource("25")
material = ExtResource("9_5wih3")

[node name="TrailRenderer2" type="Node3D" parent="Attacker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.269387, -0.0434498, -0.485435)
script = ExtResource("23")
width = 0.4
width_curve = ExtResource("25")
material = ExtResource("9_5wih3")

[node name="Sounds" type="Node3D" parent="Attacker"]
script = ExtResource("7")

[node name="AudioStreamPlayer3D3" type="AudioStreamPlayer3D" parent="Attacker/Sounds"]
volume_db = 50.0

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Attacker/Sounds"]
volume_db = 50.0

[node name="TrailRenderer3" type="Node3D" parent="Attacker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.269, -0.043, -0.485001)
script = ExtResource("23")
width = 0.4
width_curve = ExtResource("25")
material = ExtResource("24")

[node name="TrailRenderer4" type="Node3D" parent="Attacker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.269387, -0.0434498, -0.485435)
script = ExtResource("23")
width = 0.4
width_curve = ExtResource("25")
material = ExtResource("24")

[node name="ui_layer" parent="." instance=ExtResource("35_dvhi1")]

[node name="Marker3D2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 2.98023e-08, 1, -2.98023e-08, 2.98023e-08, 2.98023e-08, 1, 44.1358, 50, -38.8262)

[node name="basic_skybox_3d_flip" parent="." instance=ExtResource("28_t6842")]

[editable path="Player"]
[editable path="Base/coriolis"]
[editable path="AttackerBase/thargoid"]
